# shroomish

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DOCS.md  README.md  SELF_HOSTING.md
.github/docker/: ci-base.Dockerfile
.github/scripts/preview/: bootstrap_preview_db.py  cancel_cloned_preview_work.sh  compute_deployment_plan.sh  deploy_modal_preview.sh  deploy_preview_backend.sh  extract_modal_api_url.py  find_last_deploys.py  post_preview_links.py  prepare_preview_database.sh  publish_modal_db_secret.sh  redeploy_vercel.py  restore_prod_data.sh  run_preview_migrations.sh  stop_modal_preview_app.sh  stop_preview.sh  stop_previous_preview_backend.sh  update_vercel_preview.sh  wait_for_modal_ready.py  wait_for_supabase_branch.sh
.github/workflows/: ci-base-image.yml  daily-changelog.yml  modal-deploy.yml  modal-preview.yml  pr-preview.yml  supabase-db-migrations.yml
assets/: heavy-run.yaml
backend/: .env.example  Dockerfile  README.md  cloud_policy.py  endpoints.py  modal_app.py  models.py  observability.py  pyproject.toml  serve.py
backend/alembic/: env.py
backend/alembic/versions/: e2f3a4b5c6d7_add_queue_stats_index.py  l8m9n0p1q2r3_add_task_link.py
backend/api/: __init__.py  app.py  schemas.py
backend/api/routers/: __init__.py  admin.py  api_keys.py  clerk_webhooks.py  dashboard.py  github_webhooks.py  imports.py  orgs.py  tasks.py  trials.py
backend/auth/: __init__.py  provisioning.py
backend/worker/: __init__.py  cleanup_harbor_dirs.py  functions.py  runtime.py
frontend/: Dockerfile  README.md  env.example  knip.json  next.config.ts  package.json  pnpm-lock.yaml  run-prod-clerk-local.sh
frontend/src/: instrumentation-client.ts  instrumentation.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: agent-legend.tsx  artifacts-viewer.tsx  code-block.tsx  dataset-detail-view.tsx  experiment-detail-view.tsx  experiment-share-button.tsx  experiment-trials-table.tsx  footer.tsx  harbor-stage-timeline.tsx  import-dialog.tsx  nav.tsx  pass-at-k-graph.tsx  pass-at-one-leaderboard.tsx  preview-banner.tsx  queue-key-icon.tsx  status-icon.tsx  task-files-panel.tsx  task-verdict-badge.tsx  timing-breakdown-bar.tsx  trajectory-viewer.tsx  trial-detail-panel.tsx  unified-drawer-wrapper.tsx  worker-jobs-card.tsx
frontend/src/lib/: api.ts  format.ts  (+10 more)
oddish/: .gitignore  README.md  env.example  pyproject.toml  worker-table-refactor.md
oddish/alembic/: README.md  env.py
oddish/alembic/versions/: 000_initial_schema.py  637c45e5ac80_move_nop_oracle_to_dedicated_queue.py  74a0eab3e564_merge_worker_jobs_provider_external_id_.py  8f530ca04743_add_provider_and_external_id_to_worker_.py  a0b1c2d3e4f5_add_task_link.py  a4b5c6d7e8f9_add_worker_jobs_table.py  a4b5c6d7e8f9_move_nop_oracle_to_dedicated_queue.py  b5c6d7e8f9a0_backfill_worker_jobs_from_domain_rows.py  baseline_baseline.py  c4b5a6d7e8f9_add_task_version_expansion.py  c6d7e8f9a0b1_drop_legacy_trial_claim_indexes.py  d5e6f7a8b9c0_null_stale_data_harbor_result_paths.py  d7e8f9a0b1c2_drop_sidecar_modal_fc_columns.py  e6f7a8b9c0d1_add_experiment_table_indexes.py  e6f7a8b9c0d1_retire_pending_job_status.py  e8f9a0b1c2d3_task_experiments_mtm.py  f7a8b9c0d1e2_add_trial_superseded_by.py  f9a0b1c2d3e4_add_trial_origin.py  g8b9c0d1e2f3_cleanup_pr55_drift.py  h9c0d1e2f3a4_partial_unique_tasks_org_name.py  i1d2e3f4a5b6_partial_indexes_for_soft_delete.py  j2e3f4a5b6c7_add_experiments_last_activity_at.py  k2l3m4n5o6p7_soft_delete_task_experiments.py  t6u7v8w9x0y1_add_dashboard_usage_index.py  v8w9x0y1z2a3_add_task_versioning.py  w9x0y1z2a3b4_add_trial_experiment_id.py  x1y2z3a4b5c6_add_dashboard_experiment_indexes.py  y2z3a4b5c6d7_allow_partial_trial_scores.py  z3a4b5c6d7e8_add_trial_heartbeat_diagnostics.py
oddish/src/oddish/: __init__.py  backfill_queue_keys.py  config.py  model_pricing.py  queue.py  schemas.py  task_timeouts.py  timing.py
oddish/src/oddish/analyze/: _sdk_utils.py  classifier.py  classify_prompt.txt
oddish/src/oddish/api/: endpoints.py  helpers.py
oddish/src/oddish/cli/: __init__.py  api.py  cancel.py  combine.py  config.py  delete.py  ls.py  publish.py  pull.py  retry.py  run.py  status.py  upload.py
oddish/src/oddish/core/: admin.py  dashboard.py  endpoints.py  helpers.py  public.py  public_helpers.py  sweeps.py  tasks.py  trial_imports.py  trial_io.py  zip_imports.py
oddish/src/oddish/db/: __init__.py  connection.py  models.py  soft_delete.py  storage.py
oddish/src/oddish/integrations/github/: formatter.py  notifier.py
oddish/src/oddish/integrations/sauron/: __init__.py  s3_uploader.py
oddish/src/oddish/server/: __init__.py  __main__.py
oddish/src/oddish/workers/: harbor_runner.py
oddish/src/oddish/workers/jobs/: __init__.py  enqueue.py  handlers.py  registry.py
oddish/src/oddish/workers/queue/: __init__.py  analysis_handler.py  cleanup.py  queue_manager.py  single_job.py  slots.py  task_expand_handler.py  trial_failures.py  trial_handler.py  verdict_handler.py  worker.py  worker_job_dispatcher.py  worker_job_single_job.py
oddish/tests/: test_backend_task_file_etag.py  test_backend_task_user_resolution.py  test_cleanup_retry_backoff.py  test_cli_combine.py  test_cli_retry_publish.py  test_cli_run_gpu.py  test_cli_status.py  test_cli_upload.py  test_config_queue_keys.py  test_dashboard_filters.py  test_experiment_combine.py  test_experiment_deletion.py  test_github_notifier_denest.py  test_harbor_environment_kwargs.py  test_harbor_runner.py  test_heartbeat_diagnostics.py  test_model_pricing.py  test_openai_routing.py  test_packaging_sdist.py  test_queue_metadata.py  test_retry_trial_core.py  test_task_deletion.py  test_task_detail_endpoint.py  test_task_expand_handler.py  test_task_status_versioning.py  test_task_storage.py  test_task_timeouts.py  test_trial_max_attempts.py  test_worker_job_dispatcher.py  test_worker_jobs_handlers.py  test_worker_jobs_registry.py  test_worker_jobs_runner.py  test_worker_jobs_schema.py  test_zombie_txn_reaper.py
scripts/: test_daytona_teardown.py
supabase/: config.toml
(+60 files in other folders)
