[project]
name = "oddish-app"
version = "0.1.0"
description = "Cloud deployment layer for Oddish - Modal API with multi-tenant auth"
requires-python = ">=3.14"

# All direct runtime dependencies are pinned to exact versions for
# supply-chain security.  Upgrades happen via ``uv lock --upgrade-package
# <name>`` (or ``--upgrade`` to refresh everything), which regenerates
# ``uv.lock`` with the new pin; CI runs ``uv sync --frozen`` to reject any
# unpinned drift.
dependencies = [
    # Backend API + Modal workers should install the broadest oddish package set.
    # Local path dep resolved via [tool.uv.sources]; oddish's own direct
    # deps are pinned in oddish/pyproject.toml.
    "oddish[all]",

    # pyparsing for pyiceberg compatibility
    "pyparsing==3.3.2",

    # Modal deployment
    "modal==1.4.2",

    # Auth - JWT validation for Clerk
    "python-jose[cryptography]==3.5.0",

    # HTTP client for JWKS fetching
    "httpx==0.28.1",

    # Clerk webhook verification
    "svix==1.84.1",

    # File uploads (keep aligned with oddish's pin; backend depends on
    # ``oddish[all]`` which constrains this transitively).
    "python-multipart==0.0.21",

    # Environment loading
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.uv.sources]
oddish = { path = "../oddish", editable = true }
# Mirror oddish's harbor source so the backend's own resolution also
# pulls harbor from the rishidesai/harbor fork (uv does not inherit
# sources from transitive dependencies).
harbor = { git = "https://github.com/rishidesai/harbor", branch = "main" }
