[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "oddish"
version = "0.1.8"
description = "Run Harbor tasks in the cloud with scheduling, monitoring, and persistent state"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Rishi Desai", email = "rishi@abundant.ai" },
]
keywords = ["harbor", "eval", "llm", "agent", "benchmark", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # HTTP client (CLI talks to the API over HTTP)
    "httpx>=0.27.0",
    # Validation & settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Harbor (task models, agent config, dataset handling)
    "harbor==0.1.45",
]

[project.optional-dependencies]
server = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # S3-compatible storage
    "aioboto3>=13.0.0",
]
worker = [
    "oddish[server]",
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
    "twine>=6.0.0",
]
all = [
    "oddish[worker,dev]",
]

[project.urls]
Homepage = "https://github.com/abundant-ai/oddish"
Repository = "https://github.com/abundant-ai/oddish"
Issues = "https://github.com/abundant-ai/oddish/issues"
Documentation = "https://github.com/abundant-ai/oddish/blob/main/DOCS.md"

[project.scripts]
oddish = "oddish.cli:app"

[tool.hatch.build.targets.sdist]
exclude = [".git", "uv.lock", ".pre-commit-config.yaml"]
include = ["src/oddish/analyze/*.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/oddish"]
include = ["src/oddish/analyze/*.txt"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.orm.*",
    "sqlalchemy.ext.asyncio.*",
    "harbor.*",
    "asyncpg.*",
    "aioboto3.*",
    "google.generativeai.*",
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "cfgv==3.5.0",
    "distlib==0.4.0",
    "docutils==0.22.4",
    "id==1.6.1",
    "identify==2.6.16",
    "iniconfig==2.3.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "keyring==25.7.0",
    "mypy>=1.19.1",
    "more-itertools==10.8.0",
    "nh3==0.3.3",
    "nodeenv==1.10.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "readme-renderer==44.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "sqlalchemy2-stubs>=0.0.2a38",
    "twine==6.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "virtualenv==20.36.1",
]
