[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "oddish"
version = "0.1.12"
description = "Run Harbor tasks in the cloud with scheduling, monitoring, and persistent state"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Rishi Desai", email = "rishi@abundant.ai" },
]
keywords = ["harbor", "eval", "llm", "agent", "benchmark", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

# All direct runtime dependencies are pinned to exact versions for
# supply-chain security.  Upgrades happen via ``uv lock --upgrade-package
# <name>`` (or ``--upgrade`` to refresh everything), which regenerates
# ``uv.lock`` with the new pin; CI runs ``uv sync --frozen`` to reject any
# unpinned drift.  See ``CONTRIBUTING.md`` (or ask) for the upgrade flow.
dependencies = [
    # CLI
    "typer==0.21.1",
    "rich==14.3.1",
    # HTTP client (CLI talks to the API over HTTP)
    "httpx==0.28.1",
    # Validation & settings
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    # Harbor (task models, agent config, dataset handling).
    # Installed from the rishidesai/harbor fork's main branch via
    # [tool.uv.sources] below.  When bumping, run
    # ``uv lock --upgrade-package harbor`` to refresh the pinned commit.
    "harbor",
    # Source-of-truth pricing table (`litellm.model_cost`) covering ~2,700
    # models.  See ``oddish.model_pricing`` for our fallback for brand-new
    # models not yet in the installed litellm release.  Bump this pin on a
    # regular cadence (e.g. weekly) to pick up newly-launched models.
    "litellm==1.83.14",
]

[project.optional-dependencies]
server = [
    # Web framework
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-multipart==0.0.21",
    "python-jose[cryptography]==3.5.0",
    # Database
    "sqlalchemy[asyncio]==2.0.46",
    "asyncpg==0.31.0",
    "alembic==1.18.1",
    # S3-compatible storage
    "aioboto3==15.5.0",
]
worker = [
    "oddish[server]",
    # Needed when hosted workers run Harbor with EnvironmentType.DAYTONA.
    "daytona>=0.165.0",
    # LLM providers
    "anthropic==0.76.0",
    "openai==2.24.0",
    "google-generativeai==0.8.6",
    "modal==1.4.2",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pre-commit==4.5.1",
    "twine==6.2.0",
]
all = [
    "oddish[worker,dev]",
]

[project.urls]
Homepage = "https://github.com/abundant-ai/oddish"
Repository = "https://github.com/abundant-ai/oddish"
Issues = "https://github.com/abundant-ai/oddish/issues"
Documentation = "https://github.com/abundant-ai/oddish/blob/main/DOCS.md"

[project.scripts]
oddish = "oddish.cli:app"

[tool.uv.sources]
harbor = { git = "https://github.com/rishidesai/harbor", branch = "main" }

[tool.hatch.build.targets.sdist]
exclude = [".git", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/oddish"]
include = ["src/oddish/analyze/*.txt"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.orm.*",
    "sqlalchemy.ext.asyncio.*",
    "harbor.*",
    "asyncpg.*",
    "aioboto3.*",
    "google.generativeai.*",
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "cfgv==3.5.0",
    "distlib==0.4.0",
    "docutils==0.22.4",
    "id==1.6.1",
    "identify==2.6.16",
    "iniconfig==2.3.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "keyring==25.7.0",
    "mypy>=1.19.1",
    "more-itertools==10.8.0",
    "nh3==0.3.3",
    "nodeenv==1.10.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "readme-renderer==44.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "sqlalchemy2-stubs>=0.0.2a38",
    "twine==6.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "virtualenv==20.36.1",
]
